<resources>
    <string name="app_name">atomic</string>


    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>


    <string name="small_problem">出现了点小问题,稍后重试</string>
    <string name="invalid_video">无效的视频</string>
    <string name="error_button">确定</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update_but_str">立即升级</string>
    <string name="tips_search">请输入关键字</string>
    <string name="tips_search_no_data">抱歉没有数据!</string>
    <string name="my_download_str">我的下载</string>
    <string name="watch_history_str">观看历史</string>
    <string name="check_update_str">检查更新</string>
    <string name="option_data_source_str">切换数据源</string>
    <string name="home_lately_recommend_text_str">推荐:</string>
    <string name="home_recommend_live_str">直播:</string>
    <string name="custom_server_str">设置私服地址:</string>
    <string name="dialog_edit_text">确认</string>
    <string name="dialog_btn_confirm_text">请输入私服前缀:</string>

</resources>
